--- a/.github/workflows/hash_func.yml
+++ b/.github/workflows/hash_func.yml
@@ -4,6 +4,6 @@ jobs:
   hash:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@4
+      - uses: actions/checkout@v4
         env:
           HASH: ${{ hashFiles('.github/workflows/*.yml') }}
