--- a/.github/workflows/dump.yml
+++ b/.github/workflows/dump.yml
@@ -4,7 +4,7 @@ jobs:
   debug:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@4
+      - uses: actions/checkout@v4
       - uses: ./.github/actions/dump/
         id: dump
         with:
