--- a/.github/actions/dump/action.yml
+++ b/.github/actions/dump/action.yml
@@ -14,7 +14,7 @@ outputs:
 runs:
   using: composite
   steps:
-    - run: printenv | sort
+    - run: "${GITHUB_ACTION_PATH}"/script.sh
       shell: bash
     - run: echo "${CONTEXT}"
       if: ${{ inputs.enable-context == 'true' }}
@@ -23,4 +23,3 @@ runs:
       shell: bash
     - id: current
       run: echo "date=$(date)" >> "${GITHUB_OUTPUT}"
-      shell: bash
